Fix flexbox items alignment when row is not full by calculating padding on container width change.

--- a/src/features/cocktails/CocktailNavigator/CocktailNavigator.module.css
+++ b/src/features/cocktails/CocktailNavigator/CocktailNavigator.module.css
@@ -18,6 +18,6 @@
 @media (max-width: 1200px) {
     .navigatorContainer {
         width: 100%; 
-        margin: auto;
+        margin: 0 auto auto auto;
     }
 }
