--- a/src/shared/components/Carousel/Carousel.module.css
+++ b/src/shared/components/Carousel/Carousel.module.css
@@ -137,7 +137,6 @@
     .card {
         width: 170px;
         height: 225px;
-        margin: auto;
     }
 
     .image {
